@@ -16,6 +16,11 @@ PyVISA Changelog
   Numpy style extraction already handled this case correctly but it was not so
   for the builtin parser.
 - changed constant ControlFlow enum type from IntEnum to IntFlag PR#652
+  This change also triggers a change in attributes.py to include a new Attribute
+  class, FlagAttribute where the enum type is declared at IntFlag. 
+  Class AttrVI_ATTR_ASRL_FLOW_CNTRL now inherits from FlagAttribute.
+  Flow control attribute per ivi foundation definition is a flag and 
+  multiple flow control types can be set.
 
 1.11.3 (07-11-2020)
 -------------------
